--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport"
 				content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<script src="./js/script.js" defer></script>
 	<title>ToDo</title>
 
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -22,11 +23,13 @@
 <div class="todo-container">
 
 	<ul class="todo todo-list" id="todo">
+		
 	</ul>
-	<ul class="todo" id="completed">
+	<ul class="todo todo-completed" id="completed">
+		
 	</ul>
 </div>
 
-<script src="js/script.js"></script>
+
 </body>
 </html>
